--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,6 +5,20 @@
     <title>Wat Taco</title>
 </head>
 <body>
-    <h1>Derp</h1>
+    <h1>Sign Up</h1>
+    <form action="/signup" method="post" name="signup">
+        {{form.hidden_tag()}}
+
+        {% for error in form.errors.phone_number %}
+            <span style="color: red;">[{{error}}]</span>
+            <br>
+        {% endfor %}
+
+        <p>
+            Phone Number<br>
+            {{form.phone_number()}}<br>
+        </p>
+        <p><input type="submit" value="Sign Up"></p>
+    </form>
 </body>
 </html>
