--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8" />
     <title>Wat Taco</title>
+    <link href="/static/main.css" rel="stylesheet" />
+    <script type="text/javascript" src="//use.typekit.net/zul0pef.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-    <h1>Sign Up</h1>
-    <form action="/signup" method="post" name="signup">
-        {{form.hidden_tag()}}
+  <div class="table">
+    <div class="table-center">
+      <div class="wrapper">
+        <h1>UWaterloo <3 Tacos</h1>
+        <p>That's why you want SMS whenever a UW restaurant is selling Tacos.</p>
+        <form action="/signup" method="post" name="signup">
+            {{form.hidden_tag()}}
 
-        {% for error in form.errors.phone_number %}
-            <span style="color: red;">[{{error}}]</span>
-            <br>
-        {% endfor %}
+            {% for error in form.errors.phone_number %}
+                <span class="error">[{{error}}]</span>
+                <br>
+            {% endfor %}
 
-        <p>
-            Phone Number<br>
-            {{form.phone_number()}}<br>
-        </p>
-        <p><input type="submit" value="Sign Up"></p>
-    </form>
+            <p>
+                {{form.phone_number(placeholder="(123) 456-7890")}}
+                <input type="submit" value="Sign Up">
+            </p>
+        </form>
+      </div>
+    </div>
+  </div>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
