--- a/web/templates/success.html
+++ b/web/templates/success.html
@@ -3,8 +3,23 @@
 <head>
     <meta charset="UTF-8" />
     <title>Congrats</title>
+    <link href="/static/main.css" rel="stylesheet" />
+    <script type="text/javascript" src="//use.typekit.net/zul0pef.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-    <h1>Congradulations, it is now recognized that you love tacos.</h1>
+  <section>
+    <div class="wrapper center">
+      <div class="success-message">
+        <h1>Congratulations!<br/> You're officially subscribed to WatTaco!</h1>
+      </div>
+      <img class="taco" src="/static/taco.png" alt="" />
+    </div>
+  </section>
+
+  <footer>
+    <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a></p>
+  </footer>
+  <script type="text/javascript" src="/static/prefixfree.min.js"></script>
 </body>
 </html>
