--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -47,6 +47,7 @@
   </section>
 
   <footer>
+    <p class="quote">"{{ pun }}"</p>
     <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a></p>
   </footer>
   <script type="text/javascript" src="/static/prefixfree.min.js"></script>
