--- a/web/static/main.css
+++ b/web/static/main.css
@@ -65,6 +65,11 @@ h1 {
 p {
   margin: 0.5em 0;
 }
+p.quote {
+  color: #CCC;
+  font-weight: 100;
+  font-size: 16px;
+}
 
 .error {
   color: red;
