--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>WatTaco</title>
-    <link href="/static/main.css" rel="stylesheet" />
-    <link href="/static/phone.css" rel="stylesheet" />
-    <script type="text/javascript" src="//use.typekit.net/zul0pef.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block body %}
   <section>
     <div class="wrapper">
       <article id="devices" 
@@ -50,16 +41,4 @@
     <p class="quote">"{{ pun }}"</p>
     <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a></p>
   </footer>
-  <script type="text/javascript" src="/static/prefixfree.min.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-49477558-1', 'wattaco.com');
-    ga('send', 'pageview');
-
-  </script>
-</body>
-</html>
+{% endblock %}
