--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -7,6 +7,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://wattaco.com/" />
     <meta property="og:image" content="http://wattaco.com/static/taco.png" />
+    <meta property="og:description" content="WatTaco works tirelessly to notify you if any restaurant on campus is selling tacos. Sign up and join tens of people who also like tacos at UWaterloo." />
     <link href="/static/main.css" rel="stylesheet" />
     <link href="/static/phone.css" rel="stylesheet" />
     <script type="text/javascript" src="//use.typekit.net/zul0pef.js"></script>
