added all creators

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,6 +39,6 @@
 
   <footer>
     <p class="quote">"{{ pun }}"</p>
-    <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a></p>
+    <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a>, lvaughan, <a href="https://github.com/amagineer">amagineer</a></p>
   </footer>
 {% endblock %}
