--- a/web/templates/success.html
+++ b/web/templates/success.html
@@ -10,6 +10,6 @@
   </section>
 
   <footer>
-    <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a></p>
+    <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a>, lvaughan, <a href="https://github.com/amagineer">amagineer</a></p>
   </footer>
 {% endblock %}
