--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -16,6 +16,15 @@
 <body>
   {% block body %}
   {% endblock %}
+
+  <footer>
+    {% block footer %}
+    {% endblock %}
+    <p>
+      <a href="/unsubscribe">Unsubscribe</a> | 
+      Created by: <a href="http://thmsmlr.com">thmsmlr</a>, lvaughan, <a href="https://github.com/amagineer">amagineer</a>
+    </p>
+  </footer>
   <script type="text/javascript" src="/static/prefixfree.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
