--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -36,9 +36,8 @@
       </div>
     </div>
   </section>
+{% endblock %}
 
-  <footer>
-    <p class="quote">"{{ pun }}"</p>
-    <p>Created by: <a href="http://thmsmlr.com">thmsmlr</a>, lvaughan, <a href="https://github.com/amagineer">amagineer</a></p>
-  </footer>
+{% block footer %}
+  <p class="quote">"{{ pun }}"</p>
 {% endblock %}
